[package]
categories = ["asynchronous"]
description = "Communication library for Fluke 189 digital multimeter"
edition = "2021"
homepage = "https://github.com/cytrinox/f189ctrl"
keywords = ["fluke", "dmm"]
license = "MIT"
name = "f189ctrl"
readme = "README.md"
repository = "https://github.com/cytrinox/f189ctrl"
rust-version = "1.63"
version = "0.1.0"

[dependencies]
byteorder = "1.4.3"
bytes = "1.3.0"
chrono = {version = "0.4.23", features = ["serde"]}
clap = {version = "4.4", features = ["cargo", "string"]}
futures = "0.3.25"
thiserror = "1.0"
tokio = {version = "1.24.2", features = ["full"]}
tokio-serial = "5.4.1"
tokio-util = {version = "0.7.4", features = ["codec"]}
num_enum = "0.7.1"
csv = "1.3.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = {version = "3.4.0", features = ["chrono_0_4"] }

